--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,22 +3,19 @@ steps:
   args: ['bash', './ci/unit-test.sh']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/helloworld', 'src/']
+  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/flask-helloworld', 'src/']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/${PROJECT_ID}/helloworld']
+  args: ['push', 'gcr.io/${PROJECT_ID}/flask-helloworld']
 
-- name: 'bash'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   script: |
     #!/usr/bin/env bash
-    sed -i 's/GOOGLE_CLOUD_PROJECT/'${GOOGLE_CLOUD_PROJECT}'/g' manifest/deploy.yaml
+    gcloud container clusters get-credentials ${CLOUDSDK_CONTAINER_CLUSTER} --zone ${CLOUDSDK_COMPUTE_ZONE} --project ${PROJECT_ID}
+    curl https://raw.githubusercontent.com/helm/helm/release-3.14/scripts/get-helm-3 | bash
+    helm upgrade --install dev ./helm/ --set gcpProjectId=${PROJECT_ID}
   env:
-    - 'GOOGLE_CLOUD_PROJECT=${PROJECT_ID}'
-
-
-- name: 'gcr.io/cloud-builders/kubectl'
-  args: ['apply', '-f', 'manifest/deploy.yaml']
-  env:
+    - 'PROJECT_ID=${PROJECT_ID}'
     - 'CLOUDSDK_COMPUTE_ZONE=${_CLOUDSDK_COMPUTE_ZONE}'
     - 'CLOUDSDK_CONTAINER_CLUSTER=${_CLOUDSDK_CONTAINER_CLUSTER}'
 
