--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repositoryHost }}/{{ .Values.gcpProjectId }}/{{ include "flask-helloworld.name" . }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ include "flask-helloworld.imageRepository" . }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
