--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,6 +7,8 @@ replicaCount: 2
 gcpProjectId: ""
 
 image:
+  # Overrides the image repo whose default is {{repositoryHost}}/{{gcpProjectId}}/{{flask-helloworld.name}}.
+  repository: "" 
   repositoryHost: gcr.io
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
